# ti-platform

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/tests/: test_health.py
docs/: CLAUDE_CONTEXT.md  DECISIONS.md  EXECUTION-GUIDE.md  MASTER-PLAN.md  PRD-MVP.md  PRD-v2.md  PROMPTS.md  README.md  SECURITY-MODEL.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
